--- a/_posts/2014-04-05-No03-Bock.md
+++ b/_posts/2014-04-05-No03-Bock.md
@@ -1,1 +1,7 @@
-My recipe Bock
+---
+title: No03 The Bock
+layout: posts
+---
+
+This was a big step. First lager. First all-grain. First liquid yeast. First home-made recipe.
+
