--- a/_posts/2014-11-15-No04-Hvede.md
+++ b/_posts/2014-11-15-No04-Hvede.md
@@ -1,1 +1,7 @@
-Maltbazarens Hvede
+---
+title: No04 - Maltbazarens Viva Weizen kit
+layout: posts
+---
+
+En af Jens' fødselsdag bryg gaver. Brygget slut på efteråret, igen lidt off-season.
+
