--- a/_posts/2015-03-01-No05-IPA.md
+++ b/_posts/2015-03-01-No05-IPA.md
@@ -1,1 +1,8 @@
-Solhøj IPA
+---
+title: Solhøj IPA - Sofies konfirmations bryg
+layout: posts
+---
+
+Homemade IPA recipe - american style, California Ale WLP001 vistnok.
+
+ 
