--- a/_posts/2015-05-30-No06-Koelsh.md
+++ b/_posts/2015-05-30-No06-Koelsh.md
@@ -1,1 +1,7 @@
-Solhøj Kölsh / German Ale
+---
+title: Solhøj Kölsh / German Ale
+layout: posts
+---
+
+Homemade recipe - Kölsh. Temperaturen i værkstedet steg da sommeren kom, og den blev gæret alt for højt til stilen. Skulle have været omkring 15C men lå på primær gæring på 22C - og endnu højere på sekundær!
+
